--- a/package.json
+++ b/package.json
@@ -1,24 +1,13 @@
 {
-    "name": "api-spec",
+    "name": "stac-api-filter-extension-spec",
     "version": "1.0.0-rc.1",
-    "description": "STAC API helpers to generate, serve and check the API spec.",
-    "repository": "https://github.com/radiantearth/stac-api-spec",
+    "description": "STAC API helpers to check the API spec.",
+    "repository": "https://github.com/stac-api-extensions/filter",
     "license": "Apache-2.0",
     "scripts": {
-        "serve": "redoc-cli serve core/openapi.yaml --watch --options.expandResponses \"200,201,202,203,204\" --options.pathInMiddlePanel true",
         "check": "npm run check-markdown && npm run check-openapi",
-        "check-markdown": "remark . --frail --ignore-pattern stac-spec/",
-        "check-openapi": "npm run check-openapi-core && npm run check-openapi-commons && npm run check-openapi-ogcapi-features && npm run check-openapi-item-search && npm run check-openapi-fragments && npm run check-openapi-collections && npm run check-openapi-children",
-        "check-openapi-core": "spectral lint core/openapi.yaml --ruleset .circleci/.spectral.yml",
-        "check-openapi-commons": "spectral lint core/commons.yaml --ruleset .circleci/.spectral-fragments.yml",
-        "check-openapi-ogcapi-features": "spectral lint ogcapi-features/openapi.yaml ogcapi-features/extensions/*/openapi.yaml --ruleset .circleci/.spectral.yml",
-        "check-openapi-item-search": "spectral lint item-search/openapi.yaml --ruleset .circleci/.spectral.yml",
-        "check-openapi-fragments": "spectral lint fragments/*/openapi.yaml --ruleset .circleci/.spectral-fragments.yml",
-        "check-openapi-collections": "spectral lint collections/openapi.yaml --ruleset .circleci/.spectral.yml",
-        "check-openapi-children": "spectral lint children/openapi.yaml --ruleset .circleci/.spectral.yml",
-        "build-openapi": ".circleci/build-openapi.sh",
-        "publish-openapi": "node .circleci/publish.js",
-        "check-stac-spec-changes": "git diff --quiet HEAD ${npm_config_compare_to} -- stac-spec"
+        "check-markdown": "remark . --frail",
+        "check-openapi": "spectral lint openapi.yaml --ruleset .circleci/.spectral-fragments.yml"
     },
     "dependencies": {
         "@redocly/openapi-cli": "^1.0.0-beta.94",
