--- a/package.json
+++ b/package.json
@@ -6,22 +6,22 @@
     "license": "Apache-2.0",
     "scripts": {
         "check": "npm run check-markdown && npm run check-openapi",
-        "check-markdown": "remark . --frail",
+        "check-markdown": "remark . --frail --verbose",
         "check-openapi": "spectral lint openapi.yaml --ruleset .circleci/.spectral-fragments.yml"
     },
     "dependencies": {
-        "@redocly/openapi-cli": "^1.0.0-beta.94",
-        "@stoplight/spectral-cli": "^6.11.0",
-        "gh-pages": "^6.1.1",
+        "@redocly/cli": "^1.27.2",
+        "@stoplight/spectral-cli": "^6.14.2",
+        "gh-pages": "^6.3.0",
         "redoc-cli": "^0.13.21",
-        "remark-cli": "^12.0.0",
-        "remark-lint": "^9.1.2",
+        "remark-cli": "^12.0.1",
+        "remark-lint": "^10.0.0",
         "remark-gfm": "^4.0.0",
-        "remark-lint-no-html": "^3.1.2",
-        "remark-preset-lint-consistent": "^5.1.2",
-        "remark-preset-lint-markdown-style-guide": "^5.1.3",
-        "remark-preset-lint-recommended": "^6.1.3",
-        "remark-validate-links": "^13.0.0"
+        "remark-lint-no-html": "^4.0.0",
+        "remark-preset-lint-consistent": "^6.0.0",
+        "remark-preset-lint-markdown-style-guide": "^6.0.0",
+        "remark-preset-lint-recommended": "^7.0.0",
+        "remark-validate-links": "^13.0.2"
     },
     "remarkConfig": {
         "plugins": [
@@ -74,7 +74,7 @@
             ],
             [
                 "remark-lint-list-item-indent",
-                "space"
+                "one"
             ],
             "remark-lint-table-pipes",
             "remark-lint-no-literal-urls",
